hphp/test/slow/strict-utf8-mode/source-1.php.expectf
Fatal error: Invalid utf8 sequence in %s/strict-utf8-mode/source-1.php on line 6
